--- a/.github/workflows/factory_image_build.yaml
+++ b/.github/workflows/factory_image_build.yaml
@@ -105,7 +105,7 @@ jobs:
           sudo sed -i -e 's|1>/dev/null||g' /usr/share/manjaro-arm-tools/lib/functions.sh   
           sudo sed -i -e 's|1> /dev/null 2>&1||g' /usr/share/manjaro-arm-tools/lib/functions.sh
           sudo sed -i -e 's|2>/dev/null||g' /usr/share/manjaro-arm-tools/lib/functions.sh
-          sudo sed -i -e 's|echo "No OEM setup!"|echo "No OEM setup!"\nsed -i -e "s/unstable/stable/g" $ROOTFS_IMG/rootfs_$ARCH/etc/pacman-mirrors.conf\nsed -i -e "s/unstable/stable/g" $ROOTFS_IMG/rootfs_$ARCH/etc/pacman.d/mirrorslist|g' /usr/share/manjaro-arm-tools/lib/functions.sh
+          sudo sed -i -e 's|echo "No OEM setup!"|echo "No OEM setup!"\nsed -i -e "s/unstable/stable/g" $ROOTFS_IMG/rootfs_$ARCH/etc/pacman-mirrors.conf\nsed -i -e "s/unstable/stable/g" $ROOTFS_IMG/rootfs_$ARCH/etc/pacman.d/mirrorlist|g' /usr/share/manjaro-arm-tools/lib/functions.sh
       - 
         name: checkout
         uses: actions/checkout@v2
