--- a/.github/workflows/image_build.yaml
+++ b/.github/workflows/image_build.yaml
@@ -1,8 +1,6 @@
 name: image_build
 on:
   workflow_dispatch:
-  schedule:
-    - cron:  '30 2 * * *'
 
 jobs:
   prepare_release:
@@ -13,18 +11,13 @@ jobs:
         with:
           access_token: ${{ github.token }}
       - 
-        id: time
-        uses: nanzm/get-time-action@v1.1
-        with:
-          format: 'YYYYMMDDHHmm'
-      - 
         id: release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.time.outputs.time }}
-          release_name: Release ${{ steps.time.outputs.time }}
+          tag_name: beta5
+          release_name: Beta 5
           draft: false
           prerelease: false
     outputs:
