--- a/.github/workflows/image_stable_build.yaml
+++ b/.github/workflows/image_stable_build.yaml
@@ -16,8 +16,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: beta4
-          release_name: Release Beta4
+          tag_name: beta5
+          release_name: Beta 5
           draft: false
           prerelease: false
     outputs:
@@ -107,7 +107,7 @@ jobs:
         env:
           EDITION: ${{ matrix.EDITION }}
           BRANCH: ${{ matrix.BRANCH }}
-          VERSION: beta4
+          VERSION: beta5
         run: |
           sudo mv -v /home/runner/work/$EDITION/$EDITION/arm-profiles /usr/share/manjaro-arm-tools/profiles
           sudo buildarmimg -d pinephone -e $EDITION -v $VERSION -b $BRANCH -s plasma-mobile -k mobile
