--- a/.github/workflows/image_build.yaml
+++ b/.github/workflows/image_build.yaml
@@ -37,7 +37,7 @@ jobs:
     strategy:
       matrix:
         EDITION: [plasma-mobile]
-        BRANCH: [stable]
+        BRANCH: [unstable]
     steps:
       - 
         uses: styfle/cancel-workflow-action@0.8.0
