--- a/.github/workflows/image_build.yaml
+++ b/.github/workflows/image_build.yaml
@@ -38,7 +38,7 @@ jobs:
       matrix:
         DEVICE: [pinephone]
         EDITION: [plasma-mobile]
-        BRANCH: [unstable]
+        BRANCH: [testing]
     steps:
       - 
         uses: styfle/cancel-workflow-action@0.9.0
