--- a/.github/workflows/image_stable_build.yaml
+++ b/.github/workflows/image_stable_build.yaml
@@ -1,10 +1,12 @@
 name: image_stable_build
 on:
   workflow_dispatch:
+  schedule:
+    - cron:  '30 2 * * *'
 
 jobs:
   prepare_release:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - 
         uses: styfle/cancel-workflow-action@0.9.0
@@ -12,12 +14,12 @@ jobs:
           access_token: ${{ github.token }}
       - 
         id: release
-        uses: actions/create-release@v1
+        uses: actions/create-release@v1.1.4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: beta5
-          release_name: Beta 5
+          tag_name: beta6
+          release_name: Release Beta 6
           draft: false
           prerelease: false
     outputs:
@@ -29,6 +31,7 @@ jobs:
     needs: prepare_release
     strategy:
       matrix:
+        DEVICE: [pinephone]
         EDITION: [plasma-mobile]
         BRANCH: [stable]
     steps:
@@ -36,91 +39,21 @@ jobs:
         uses: styfle/cancel-workflow-action@0.9.0
         with:
           access_token: ${{ github.token }}
-      -
-        name: install-arm-tools
-        run: |
-          sudo apt-get update
-          sudo apt install gdisk zip systemd-container bmap-tools asciidoc libarchive-tools git build-essential cmake libarchive-dev pkg-config libcurl4-openssl-dev libgpgme-dev libssl-dev fakeroot dh-autoreconf qemu-utils qemu-efi-aarch64 qemu-system-arm qemu-user-static
-          
-          sudo git clone https://gitlab.manjaro.org/packages/core/pacman.git
-          cd pacman
-          sudo wget https://sources.archlinux.org/other/pacman/pacman-5.2.2.tar.gz
-          sudo tar -xvf pacman-5.2.2.tar.gz
-          cd pacman-5.2.2
-          sudo patch -p1 -i ../pacman-sync-first-option.patch
-          sudo ./configure --prefix=/usr --sysconfdir=/etc \
-            --localstatedir=/var --enable-doc \
-            --with-scriptlet-shell=/usr/bin/bash \
-            --with-ldconfig=/usr/bin/ldconfig
-          sudo make V=1
-          sudo make install
-          cd ..
-          sudo install -m644 pacman.conf /etc/pacman.conf
-          sudo install -m644 makepkg.conf /etc/
-          sudo mkdir -p /etc/pacman.d
-          sudo touch /etc/pacman.d/mirrorlist
-          cd ..
-          
-          sudo wget https://gitlab.manjaro.org/packages/community/manjaro-arm-qemu-static/-/raw/master/qemu-static.conf -O /usr/lib/binfmt.d/qemu-static.conf
-          sudo service systemd-binfmt restart
-          
-          pkgver=23
-          sudo wget https://git.archlinux.org/arch-install-scripts.git/snapshot/arch-install-scripts-$pkgver.tar.gz
-          sudo tar -xvf arch-install-scripts-$pkgver.tar.gz
-          sudo make -C arch-install-scripts-$pkgver
-          sudo make -C arch-install-scripts-$pkgver check
-          sudo make -C arch-install-scripts-$pkgver PREFIX=/usr install
-
-          sudo git clone https://gitlab.manjaro.org/manjaro-arm/applications/manjaro-arm-tools.git
-
-          install_m_a_tools() {
-              pkgname=manjaro-arm-tools
-              sudo install -dm777 /usr/share/$pkgname/lib
-              sudo install -dm777 /usr/share/$pkgname/profiles
-              sudo install -d /etc/$pkgname/
-              sudo install -dm777 /var/lib/$pkgname/{pkg,img,tmp,profiles}
-              sudo install -dm777 /var/cache/$pkgname/{pkg/pkg-cache,img}
-              sudo install -Dm755 $pkgname/lib/* /usr/share/$pkgname/lib/
-              sudo install -Dm755 $pkgname/bin/* /usr/bin/
-              sudo install -Dm755 $pkgname/lib/manjaro-arm-tools.conf /etc/manjaro-arm-tools/
-          }
-          install_m_a_tools
-          
-          sudo sed -i -e 's|1>/dev/null||g' /usr/share/manjaro-arm-tools/lib/functions.sh   
-          sudo sed -i -e 's|1> /dev/null 2>&1||g' /usr/share/manjaro-arm-tools/lib/functions.sh
-          sudo sed -i -e 's|2>/dev/null||g' /usr/share/manjaro-arm-tools/lib/functions.sh 
       - 
-        name: checkout
-        uses: actions/checkout@v2
+        id: image-build
+        uses: manjaro-arm/rootfs@master
         with:
-          repository: manjaro-pinephone/arm-profiles
-          token: "${{ secrets.GITHUB_TOKEN }}"
-          path: 'arm-profiles'          
-      -
-        name: build
-        env:
-          EDITION: ${{ matrix.EDITION }}
-          BRANCH: ${{ matrix.BRANCH }}
-          VERSION: beta5
-        run: |
-          sudo mv -v /home/runner/work/$EDITION/$EDITION/arm-profiles /usr/share/manjaro-arm-tools/profiles
-          sudo buildarmimg -d pinephone -e $EDITION -v $VERSION -b $BRANCH -s plasma-mobile -k mobile
-          
-          FILE_PATH=$(find /var/cache/manjaro-arm-tools/img -type f -name "*.img.xz" -exec stat -c '%Y %n' {} \; | sort -nr | awk 'NR==1 {print $2}')
-          cp -v $FILE_PATH .
-          
-          sha256sum $(basename $FILE_PATH) > $(basename $FILE_PATH).sha256
-
-          echo "FILE_PATH=$(basename $FILE_PATH)" >> $GITHUB_ENV
-          echo "FILE_SHA256=$(basename $FILE_PATH).sha256" >> $GITHUB_ENV
-          
-          FILE_PKG=$(find /var/cache/manjaro-arm-tools/img -type f -name "*-pkgs.txt" -exec stat -c '%Y %n' {} \; | sort -nr | awk 'NR==1 {print $2}')
-          cp -v $FILE_PKG .
-
-          echo "FILE_PKG=$(basename $FILE_PKG)" >> $GITHUB_ENV
+          arm-profiles-repo: https://github.com/manjaro-pinephone/arm-profiles
+          device: ${{ matrix.device }}
+          edition: ${{ matrix.edition }}
+          branch: ${{ matrix.branch }}
+          version: beta6
+          #CI_PUB_KEY: "${{ secrets.CI_PUB_KEY }}"
+          #CI_GPG_SECRET: "${{ secrets.CI_GPG_SECRET }}"
+          #CI_GPG_PASSPHRASE: "${{ secrets.CI_GPG_PASSPHRASE }}"
       - 
         id: upload_release 
-        uses: actions/upload-release-asset@v1
+        uses: actions/upload-release-asset@v1.0.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -129,18 +62,18 @@ jobs:
           asset_name: ${{ env.FILE_PATH }}
           asset_content_type: application/x-iso-image
       - 
-        id: upload_sha256
-        uses: actions/upload-release-asset@v1
+        id: upload_sha1
+        uses: actions/upload-release-asset@v1.0.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.prepare_release.outputs.upload_url }}
-          asset_path: ./${{ env.FILE_SHA256 }}
-          asset_name: ${{ env.FILE_SHA256 }}
+          asset_path: ./${{ env.FILE_SHA1 }}
+          asset_name: ${{ env.FILE_SHA1 }}
           asset_content_type: text/plain
       - 
         id: upload_pkg
-        uses: actions/upload-release-asset@v1
+        uses: actions/upload-release-asset@v1.0.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -156,4 +89,3 @@ jobs:
           release_id: ${{ needs.prepare_release.outputs.release_id }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
